# paper-clip-server

./: .ini  README.md  pyproject.toml  route_config.py
db/: db_config.py
flask/: route_config.py  server_config.py
flask/api/: api_student.py
flask/db/: db_config.py
flask/utils/: uitils.py
